# DocuChat-Project

./: .gitignore  README.md  create_frontend.sh
.github/workflows/: ci.yml
backend/: .env.sample  Dockerfile  README.md  docu_chat_backend_django_drf_channels_mvp_code_pack.py  manage.py  pyproject.toml  requirements.txt
backend/api/: admin.py  authentication.py  consumers.py  embeddings.py  indexing.py  models.py  permissions.py  rag.py  routing.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: .env.sample  asgi.py  routing.py  settings.py  urls.py
docs/: API.md  ARCHITECTURE.md  DECISIONS.md  OPERATIONS.md  README.md
frontend/: .env.sample  .eslintrc.cjs  Dockerfile  create_frontend.sh  index.html  package-lock.json  package.json
frontend/src/: AppRouter.tsx  main.tsx
frontend/src/components/: ProgressStream.tsx
frontend/src/pages/: App.tsx  ChatPage.tsx  LoginPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts
infra/: docker-compose.yml  nginx.conf
